chore: update code for release

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -188,6 +188,12 @@
             "open_btn": "Open",
             "data_dir": "Data Directory",
             "data_dir_desc": "Account data and config file location",
+            "antigravity_path": "Antigravity Path",
+            "antigravity_path_placeholder": "Not set (Will use auto-detection)",
+            "antigravity_path_desc": "If you installed Antigravity in a non-standard location, you can manually specify the executable path here (Points to .app on MacOS).",
+            "antigravity_path_select": "Select Antigravity Executable",
+            "antigravity_path_detected": "Detected path updated",
+            "detect_btn": "Detect",
             "logs_title": "Logs Maintenance",
             "logs_desc": "Clear log cache files. Does not affect account data.",
             "clear_logs": "Clear Logs Cache",
