--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -189,6 +189,12 @@
             "open_btn": "打开",
             "data_dir": "数据目录",
             "data_dir_desc": "账号数据和配置文件的存储位置",
+            "antigravity_path": "反重力程序路径",
+            "antigravity_path_placeholder": "未设置 (将使用自动探测)",
+            "antigravity_path_desc": "如果您将 Antigravity 应用安装在非标准位置，可在此手动指定可执行文件路径（MacOS 指向 .app 目录）。",
+            "antigravity_path_select": "选择反重力程序可执行文件",
+            "antigravity_path_detected": "已更新探测到的路径",
+            "detect_btn": "探测",
             "logs_title": "日志维护",
             "logs_desc": "清理应用产生的日志缓存文件，不会影响账号数据。",
             "clear_logs": "清理日志缓存",
